--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,8 @@
 // Pages
 // ----------------------------------------------------------------------
 @import "pages/homepage";
+@import "pages/slick-theme";
+@import "pages/slick";
 
 // ----------------------------------------------------------------------
 // Responsive
