--- a/src/views/layouts/footer.html
+++ b/src/views/layouts/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer-container">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="center">
-        <div class="col-md-12">
-          <p>Footer Container</p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="center">
+                <div class="container content-footer">
+                    <p class="txt-footer">&copy; 2014 Escape by FreebiesXpress &#9679; Made In Toronto</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="clearfix"></div>
+    <div class="clearfix"></div>
 </footer>
