--- a/src/views/pages/index.html
+++ b/src/views/pages/index.html
@@ -10,26 +10,25 @@
 </head>
 <body>
   <div class="wrapper">
-    <!-- include header.html -->
-    @@include('../layouts/header.html')
+    
+    
 
     <!-- include banner.html -->
     @@include('../partials/banner.html')
+    <!-- include header.html -->
+    @@include('../layouts/header.html')
 
-    <section class="main-container">
-      <div id="a" class="block-container">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="center">
-              <div class="col-xs-12">
-                <h4 class="title-block">HTML Boilerplate</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="clearfix"></div>
-    </section>
+    <!-- include pages -->
+    @@include('../partials/portfolio.html')
+    @@include('../partials/features.html')
+    @@include('../partials/skill.html')
+    @@include('../partials/powerfull.html')
+    @@include('../partials/work.html')
+    @@include('../partials/company.html')
+    @@include('../partials/team.html')
+    @@include('../partials/price.html')
+    @@include('../partials/contact.html')
+    @@include('../partials/maps.html')
 
     <!-- include footer.html -->
     @@include('../layouts/footer.html')
