--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -127,6 +127,7 @@ body {
     top: 0;
     background-color: #000;
     border-bottom: 1px solid #000;
+    z-index: 999;
     .nav-list {
         .item-nav {
             .title-nav {
