--- a/src/views/layouts/header.html
+++ b/src/views/layouts/header.html
@@ -38,7 +38,7 @@
                         <a class="title-nav" href="#contact">CONTACT</a>
                     </li>
                     <li class="item-nav">
-                        <a class="title-nav" href="#"><span class="icon-search"></span></a>
+                        <a class="title-nav"><span class="icon-search"></span></a>
                     </li>
                 </ul>
             </div>
