--- a/src/views/partials/company.html
+++ b/src/views/partials/company.html
@@ -6,32 +6,32 @@
                 <p class="txt-title">We do love to work and increase our counter numbers, this is what we’ve done till now</p>
                 <div class="row">
                     <div class="col-lg-3 col-md-3">
-                        <h3 class="fact">218</h3>
-                        <p class="icon">
-                            <span class="icon-checkbox-checked"></span>
-                        </p>
-                        <p class="txt">COMPLETED PROJECTS</p>
+                        <h3 class="fact"><div class="fact-1"></div><p class="count">218</p><div class="fact-2"></div></h3>
+                        <div class="icon">
+                            <div class="line"></div><span class="icon-checkbox-checked"></span><div class="line-1"></div>
+                        </div>
+                        <p class="txt"> COMPLETED PROJECTS</p>
                     </div>
                     <div class="col-lg-3 col-md-3">
-                        <h3 class="fact">218</h3>
-                        <p class="icon">
-                            <span class="icon-checkbox-checked"></span>
-                        </p>
-                        <p class="txt">COMPLETED PROJECTS</p>
+                        <h3 class="fact"><div class="fact-1"></div><p class="count">360</p><div class="fact-2"></div></h3>
+                        <div class="icon">
+                            <div class="line"></div><span class="icon-checkbox-checked"></span><div class="line-1"></div>
+                        </div>
+                        <p class="txt">HOURS OF WORK <span class="txt-con">/MONTH</span></p>
                     </div>
                     <div class="col-lg-3 col-md-3">
-                        <h3 class="fact">218</h3>
-                        <p class="icon">
-                            <span class="icon-checkbox-checked"></span>
-                        </p>
-                        <p class="txt">COMPLETED PROJECTS</p>
+                        <h3 class="fact"><div class="fact-1"></div><p class="count">135</p><div class="fact-2"></div></h3>
+                        <div class="icon">
+                            <div class="line"></div><span class="icon-checkbox-checked"></span><div class="line-1"></div>
+                        </div>
+                        <p class="txt">SOLVED TICKETS</p>
                     </div>
                     <div class="col-lg-3 col-md-3">
-                        <h3 class="fact">218</h3>
-                        <p class="icon">
-                            <span class="icon-checkbox-checked"></span>
-                        </p>
-                        <p class="txt">COMPLETED PROJECTS</p>
+                        <h3 class="fact"><div class="fact-1"></div><p class="count">174</p><div class="fact-2"></div></h3>
+                        <div class="icon">
+                            <div class="line"></div><span class="icon-checkbox-checked"></span><div class="line-1"></div>
+                        </div>
+                        <p class="txt">SATISFIED CLIENTS</p>
                     </div>
                 </div>
             </div>
