--- a/src/views/partials/powerfull.html
+++ b/src/views/partials/powerfull.html
@@ -4,40 +4,40 @@
         <p class="txt-title">We’re good and experienced at different things and areas and we promise about qulity of our works</p>
         <div class="content">
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color">
+                    
                 </div>
                 <p class="tit">WEB DESIGN</p>
             </a>
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color-1">
+                    
                 </div>
-                <p class="tit">WEB DESIGN</p>
+                <p class="tit">WEB DEVELOPMENT</p>
             </a>
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color-2">
+                    
                 </div>
-                <p class="tit">WEB DESIGN</p>
+                <p class="tit">SPEED OPTIMIZATION</p>
             </a>
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color-3">
+                    
                 </div>
-                <p class="tit">WEB DESIGN</p>
+                <p class="tit">CUSTOMER SUPPORT</p>
             </a>
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color-4">
+                    
                 </div>
-                <p class="tit">WEB DESIGN</p>
+                <p class="tit">MARKETING</p>
             </a>
             <a class="item" href="">
-                <div class="count">
-                    <p class="pow">75%</p>
+                <div class="custom-color-5">
+                    
                 </div>
-                <p class="tit">WEB DESIGN</p>
+                <p class="tit">ADVERTISEMENT</p>
             </a>
         </div>
     </div>
