--- a/src/views/partials/price.html
+++ b/src/views/partials/price.html
@@ -29,7 +29,8 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="item">
                         <button class="btn1 btn btn-primary" href="">PREMIUM PLAN</button>
-                        <h3 class="pri">29.
+                        <h3 class="pri">
+                            <span class="prices">$</span>29.
                             <sub class="sub">Monthly</sub>
                         </h3>
                         <div class="txt">
@@ -45,7 +46,8 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="item">
                         <button class="btn12 btn btn-primary" href=""><i class="icon-star-full"></i>ADVANCED PLAN<i class="icon-star-full"></i></button>
-                        <h3 class="pri">49.
+                        <h3 class="pri">
+                            <span class="prices">$</span>49.
                             <sub class="sub">Monthly</sub>
                         </h3>
                         <div class="txt">
@@ -61,7 +63,8 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="item">
                         <button class="btn1 btn btn-primary" href="">ULTIMATE PLAN</button>
-                        <h3 class="pri">99.
+                        <h3 class="pri">
+                            <span class="prices">$</span>99.
                             <sub class="sub">Monthly</sub>
                         </h3>
                         <div class="txt">
@@ -82,7 +85,7 @@
 <div class="container-fluid now">
     <div class="container">
         <div class="col-lg-6 col-md-6 left">
-            <h3 class="title-now">Unique! We Do
+            <h3 class="title-now">UNIQUE! We Do
                 <span class="icon-heart"></span> It And Hope You Too</h3>
         </div>
         <div class="col-lg-6 col-md-6 right">
