--- a/src/views/partials/team.html
+++ b/src/views/partials/team.html
@@ -92,6 +92,47 @@
                         <p class="phone">
                             <span class="icon icon-phone"></span> +1 911 (77) 222-1111</p>
                     </div>
+                    <div class="col-lg-3">
+                        <div class="content">
+                            <img src="images/image.png" alt="">
+                            <button class="btn btn-primary">ALEXIS SIMPSON</button>
+                            <div class="item">
+                                <span class="ico">
+                                    <i class="icon icon-facebook2"></i>
+                                    <i class="icon icon-twitter"></i>
+                                    <i class="icon icon-star-full"></i>
+                                    <i class="icon icon-phone"></i>
+                                    <i class="icon icon-envelop"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <p class="name">CEO & Developer</p>
+                        <p class="mail">
+                            <span class="icon icon-envelop"></span>a.simpson@unique.com</p>
+                        <p class="phone">
+                            <span class="icon icon-phone"></span> +1 911 (77) 222-1111
+                        </p>
+                    </div>
+                    <div class="col-lg-3">
+                        <div class="content">
+                            <img src="images/image.png" alt="">
+                            <button class="btn btn-primary">ALEXIS SIMPSON</button>
+                            <div class="item">
+                                <span class="ico">
+                                    <i class="icon icon-facebook2"></i>
+                                    <i class="icon icon-twitter"></i>
+                                    <i class="icon icon-star-full"></i>
+                                    <i class="icon icon-phone"></i>
+                                    <i class="icon icon-envelop"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <p class="name">CEO & Developer</p>
+                        <p class="mail">
+                            <span class="icon icon-envelop"></span>a.simpson@unique.com</p>
+                        <p class="phone">
+                            <span class="icon icon-phone"></span> +1 911 (77) 222-1111</p>
+                    </div>
                 </div>
             </div>
             <span class="key icon-key"></span>
