--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -3,8 +3,7 @@ footer {
     text-align: center;
     color: #cccccc;
     .txt-footer {
-        border-bottom: 1px solid #FFF;
-        padding: 30px;
+        padding: 50px 0 30px;
         font-size: 14px;
         font-family: 'Raleway Bold';
     }
