--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,7 @@
 @import "pages/homepage";
 @import "pages/slick-theme";
 @import "pages/slick";
+@import "pages/percircle";
 
 // ----------------------------------------------------------------------
 // Responsive
