--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -87,14 +87,20 @@ html {
     position: relative;
     .key {
         position: absolute;
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         border: 1px solid #CCC;
-        bottom: -25px;
+        bottom: -21px;
         left: 48%;
-        font-size: 40px;
+        font-size: 20px;
         background-color: #00a99d;
         color: #FFF;
-        padding: 5px;
+        padding: 20px;
+        &:before {
+            position: absolute;
+            transform: rotate(45deg);
+            top: 10px;
+            left: 10px;
+        }
     }
     .title-port {
         font-family: "Raleway Bold";
@@ -230,44 +236,69 @@ html {
     position: relative;
     .key {
         position: absolute;
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         border: 1px solid #CCC;
-        bottom: -25px;
+        bottom: -21px;
         left: 48%;
-        font-size: 40px;
+        font-size: 20px;
         background-color: #00a99d;
         color: #FFF;
-        padding: 5px;
+        padding: 20px;
+        &:before {
+            position: absolute;
+            transform: rotate(45deg);
+            top: 10px;
+            left: 10px;
+        }
     }
     .ico {
         background-color: #404040;
         width: 40px;
-        height: 40px;
+        height: 60px;
         float: left;
         position: relative;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
         &:before {
-            border-left: 20px solid transparent;
-            border-right: 20px solid transparent;
-            border-top: 20px solid #00a99d;
             content: "";
             height: 0;
             left: 0;
             margin: 0 auto;
             position: absolute;
             right: 0;
-            top: 100%;
+            top: 77%;
             width: 0;
+            z-index: 222;
+            width: 0;
+            height: 0;
+            border-left: 20px solid #00a99d;
+            border-right: 20px solid #00a99d;
+            border-top: 20px solid #404040;
+        }
+        .ar:before {
+            content: '';
+            position: absolute;
+            bottom: -43%;
+            z-index: 2;
+            width: 15px;
+            width: 0;
+            height: 0;
+            border-left: 20px solid transparent;
+            border-right: 20px solid transparent;
+            border-top: 20px solid #00a99d;
+            height: 15px;
         }
         &:hover {
             background-color: #00a99d;
             &:before {
+                border-left: 20px solid #404040;
+                border-right: 20px solid #404040;
+                border-top: 20px solid #00a99d;
+            }
+            .ar:before {
                 border-left: 20px solid transparent;
                 border-right: 20px solid transparent;
-                border-top: 20px solid #000;
-                content: "";
-                top: 100%;
+                border-top: 20px solid #404040;
             }
         }
     }
@@ -345,7 +376,15 @@ html {
         font-family: "Raleway Bold";
         font-size: 30px;
         color: #e4e4e4;
-        padding-top: 10px;
+        margin: 5px;
+        .percircle {
+            float: unset;
+            span {
+                font-family: "Raleway Bold";
+                font-size: 30px;
+                color: #e4e4e4;
+            }
+        }
     }
     .tit {
         padding-top: 20px;
@@ -360,14 +399,20 @@ html {
     position: relative;
     .key {
         position: absolute;
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         border: 1px solid #CCC;
-        bottom: -25px;
+        bottom: -21px;
         left: 48%;
-        font-size: 40px;
+        font-size: 20px;
         background-color: #00a99d;
         color: #FFF;
-        padding: 5px; 
+        padding: 20px;
+        &:before {
+            position: absolute;
+            transform: rotate(45deg);
+            top: 10px;
+            left: 10px;
+        } 
     }
     .title-work {
         font-family: "Raleway Bold";
@@ -390,17 +435,22 @@ html {
         color: #8a8a8a;
         padding-bottom: 50px;
     }
-    img {
-        max-width: 100%;
+    .image-work {
+        width: 100%;
+    }
+    .item-1 {
+        padding: 0;
     }
     .item {
-        padding: 2px;
         position: relative;
         cursor: pointer;
+        background-color: #8a8a8a;
+        margin: 1px;
+        height: 176px;
         .content-item {
             position: absolute;
             z-index: 122;
-            top: 20%;
+            top: 15%;
             left: 0;
             right: 0;
             bottom: 0;
@@ -414,10 +464,17 @@ html {
             .icon {
                 color: #00a99d;
                 border: 1px solid transparent;
-                padding: 5px;
-                transform: rotate(45deg);
+                padding: 15px;
+                transform: rotate(-45deg);
                 background-color: #FFF;
                 border-radius: 5px;
+                position: absolute;
+                &:before {
+                    transform: rotate(45deg);
+                    position: absolute;
+                    left: 6px;
+                    top: 6px;
+                }
             }
             .icon-link {
                 position: absolute;
@@ -444,6 +501,7 @@ html {
             }
         }
         &:hover {
+            background-color: #1ca399;
             .content-item {
                 opacity: 1;
             }
@@ -480,13 +538,75 @@ html {
         font-family: "Raleway Medium";
         color: #e4e4e4;
         padding-bottom: 20px;
+        position: relative;
+        cursor: pointer;
+        .fact-1 {
+            width: 10px;
+            height: 10px;
+            border: 1px solid #484848;
+            border-radius: 2px;
+            background: #484848;
+            position: absolute;
+            top: 40%;
+            left: 15%;
+            transform: rotate(-45deg);
+        }
+        .fact-2 {
+            width: 10px;
+            height: 10px;
+            border: 1px solid #484848;
+            border-radius: 2px;
+            background: #484848;
+            position: absolute;
+            top: 40%;
+            right: 15%;
+            transform: rotate(-45deg);
+        }
+        &:hover {
+            .fact-1 {
+                border: 1px solid #00a99d;
+                background: #00a99d;
+            }
+            .fact-2 {
+                border: 1px solid #00a99d;
+                background: #00a99d;
+            }
+            .count {
+                opacity: .15;
+            }
+        }
     }
     .icon {
         color: #00a99d;
         padding-bottom: 15px;
+        position: relative;
+        .line {
+            height: 1px;
+            border-bottom: 1px solid #484848;
+            width: 100px;
+            position: absolute;
+            top: 20%;
+            left: 23%;
+            transform: translate(-50%, -5%);
+        }
+        .line-1 {
+            height: 1px;
+            border-bottom: 1px solid #484848;
+            width: 100px;
+            position: absolute;
+            top: 20%;
+            right: -15%;
+            transform: translate(-50%, -5%);
+        }
     }
     .txt {
-        color: #e4e4e4;
+        color: #606060;
+        font-family: "Relaway Bold";
+        font-size: 14px;
+        .txt-con {
+            font-family: "Relaway Medium";
+            font-size: 10px;
+        }
     }
 }
 .purchase {
@@ -514,7 +634,7 @@ html {
             background-color: #e4e4e4;
             border: 1px solid #e4e4e4;
             &:hover {
-                color: #FFF;
+                color: #000;
             }
         }
     }
@@ -527,38 +647,33 @@ html {
     .slick-prev {
         top: -25%;
         left: 0;
-        background: #000;
-        &:hover {
-            background: #000;
-        }
         &:before {
-            content: "";
-            font-family: 'icomoon';
+            color: #000;
         }
     }
     .slick-next {
         top: -25%;
         right: 0;
-        background: #000;
-        &:hover {
-            background: #000;
-        }
         &::before {
-            content: '';
-            font-family: 'icomoon';
-            color: #FFF;
+            color: #000;
         }
     }
     .key {
         position: absolute;
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         border: 1px solid #CCC;
-        bottom: -25px;
+        bottom: -21px;
         left: 48%;
-        font-size: 40px;
+        font-size: 20px;
         background-color: #00a99d;
         color: #FFF;
-        padding: 5px; 
+        padding: 20px;
+        &:before {
+            position: absolute;
+            transform: rotate(45deg);
+            top: 10px;
+            left: 10px;
+        }
     }
     .title-team {
         font-family: "Raleway Bold";
@@ -591,21 +706,28 @@ html {
         cursor: pointer;
         .ico {
             position: absolute;
-            top: 50%;
+            top: 40%;
             left: 0;
             right: 0;
             bottom: 0;
             .icon {
                 color: #1ca399;
                 border: 1px solid transparent;
-                padding: 5px;
-                transform: rotate(45deg);
+                padding: 15px;
+                transform: rotate(-45deg);
                 border-radius: 5px;
                 background-color: #FFF;
+                font-size: 15px;
+                &:before {
+                    position: absolute;
+                    transform: rotate(45deg);
+                    top: 8px;
+                    left: 8px;
+                }
             }
             .icon-facebook2 {
                 position: absolute;
-                left: 25%;
+                left: 14%;
                 &:hover {
                     color: #FFF;
                     background-color: #383838;
@@ -613,7 +735,7 @@ html {
             }
             .icon-twitter {
                 position: absolute;
-                left: 35%;
+                left: 28%;
                 &:hover {
                     color: #FFF;
                     background-color: #383838;
@@ -621,7 +743,7 @@ html {
             }
             .icon-star-full {
                 position: absolute;
-                left: 45%;
+                left: 42%;
                 &:hover {
                     color: #FFF;
                     background-color: #383838;
@@ -637,7 +759,7 @@ html {
             }
             .icon-envelop {
                 position: absolute;
-                left: 65%;
+                left: 69%;
                 &:hover {
                     color: #FFF;
                     background-color: #383838;
@@ -656,6 +778,18 @@ html {
             border: 1px solid transparent;
             border-radius: 5px;
         }
+        .btn {
+            font-family: "Raleway Bold";
+            font-size: 13px;
+            color: #e4e4e4;
+            background-color: #00a99d;
+            border: 1px solid transparent;
+            padding: 15px; 
+            position: absolute;
+            bottom: -5%;
+            left: 24%;
+            z-index: 2;
+        }
         &:hover {
             .ico {
                 opacity: 1;
@@ -663,22 +797,10 @@ html {
             .item {
                 opacity: 1;
             }
-        }
-    }
-    .btn {
-        font-family: "Raleway Bold";
-        font-size: 13px;
-        color: #e4e4e4;
-        background-color: #00a99d;
-        border: 1px solid transparent;
-        padding: 15px; 
-        position: absolute;
-        bottom: -5%;
-        left: 30%;
-        z-index: 2;
-        &:hover {
-            color: #e4e4e4;
-            background-color: #383838;
+            .btn {
+                color: #e4e4e4;
+                background-color: #383838;
+            }
         }
     }
     .name {
@@ -765,6 +887,7 @@ html {
     }
     .products {
         max-width: 100%;
+        margin: 0 auto;
     }
 }
 .price {
@@ -805,6 +928,7 @@ html {
             position: absolute;
             top: -12%;
             left: 22%;
+            z-index: 2;
             &:hover {
                 color: #e4e4e4 !important;
                 background: #00a99d !important;
@@ -817,7 +941,7 @@ html {
             background-color: #333333 !important;
             position: absolute;
             top: -12%;
-            left: 17%;
+            left: 13%;
             .icon-star-full {
                 color: #00a99d;
                 padding: 5px;
@@ -894,8 +1018,14 @@ html {
         font-family: "Raleway Bold";
         font-size: 26px;
         color: #383838;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        padding-top: 10px;
         .icon-heart {
             color: #00a99d;
+            font-size: 20px;
+            padding: 0 5px;
         } 
     }
     .btn {
@@ -935,17 +1065,26 @@ html {
 .maps {
     position: relative;
     width: 100%;
-    margin-bottom: 5px;
+    .map {
+        padding: 0;
+        height: 450px;
+    }
     .key {
         position: absolute;
-        transform: rotate(45deg);
+        transform: rotate(-45deg);
         border: 1px solid #CCC;
-        bottom: -20px;
+        bottom: -21px;
         left: 48%;
-        font-size: 40px;
+        font-size: 20px;
         background-color: #00a99d;
         color: #FFF;
-        padding: 5px; 
+        padding: 20px;
+        &:before {
+            position: absolute;
+            transform: rotate(45deg);
+            top: 10px;
+            left: 10px;
+        }
     }
     .form-contact {
         position: absolute;
