--- a/src/views/layouts/scripts.html
+++ b/src/views/layouts/scripts.html
@@ -5,4 +5,5 @@
 <!-- endbuild -->
 <!-- build:js script/script.min.js -->
 <script type="text/javascript" src="scripts/script.js"></script>
+<script type="text/javascript" src="scripts/percircle.js"></script>
 <!-- endbuild -->
