--- a/src/views/partials/maps.html
+++ b/src/views/partials/maps.html
@@ -1,6 +1,6 @@
 <section id="maps">
     <div class="maps">
-        <div class="container-fluid">
+        <div class="container-fluid map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3833.8172389040237!2d108.2214883144181!3d16.074970988877443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218307780e03b%3A0xf2dffa50b3ae58cb!2zMzEgxJDGsOG7nW5nIFRy4bqnbiBQaMO6LCBI4bqjaSBDaMOidSwgUS4gSOG6o2kgQ2jDonUsIMSQw6AgTuG6tW5nLCBWaeG7h3QgTmFt!5e0!3m2!1svi!2s!4v1527732169732"
                 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
