--- a/src/views/partials/skill.html
+++ b/src/views/partials/skill.html
@@ -10,7 +10,7 @@
                 <div class="content">
                     <a href="">
                         <h3 class="title-skill">RESPONSIVE & MULTIPURPOSE</h3>
-                    </a>   
+                    </a>
                     <p class="note">Desktops, Tablets & Phones</p>
                     <p class="txt">Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent
                         arcu turpis.
@@ -19,7 +19,9 @@
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="ico">
-                    <span class="icon icon-display"></span>
+                    <div class="ar">
+                        <span class="icon icon-display"></span>
+                    </div>
                 </div>
                 <div class="content">
                     <a href="">
@@ -33,7 +35,9 @@
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="ico">
-                    <span class="icon icon-display"></span>
+                    <div class="ar">
+                        <span class="icon icon-display"></span>
+                    </div>
                 </div>
                 <div class="content">
                     <a href="">
@@ -49,7 +53,9 @@
         <div class="row">
             <div class="col-lg-4 col-md-4">
                 <div class="ico">
-                    <span class="icon icon-display"></span>
+                    <div class="ar">
+                        <span class="icon icon-display"></span>
+                    </div>
                 </div>
                 <div class="content">
                     <a href="">
@@ -63,7 +69,9 @@
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="ico">
-                    <span class="icon icon-display"></span>
+                    <div class="ar">
+                        <span class="icon icon-display"></span>
+                    </div>
                 </div>
                 <div class="content">
                     <a href="">
@@ -77,7 +85,9 @@
             </div>
             <div class="col-lg-4 col-md-4">
                 <div class="ico">
-                    <span class="icon icon-display"></span>
+                    <div class="ar">
+                        <span class="icon icon-display"></span>
+                    </div>
                 </div>
                 <div class="content">
                     <a href="">
