--- a/src/styles/responsive/_responsive.scss
+++ b/src/styles/responsive/_responsive.scss
@@ -3,11 +3,16 @@
         .item {
             padding: 10px;
             .content-item {
-                top: 35%;
+                top: 15%;
                 .icon-link {
                     left: 43%;
                 }
             }
+        }
+    }
+    .maps {
+        .form-contact {
+            left: 30%;
         }
     }
 }
