--- a/src/views/partials/banner.html
+++ b/src/views/partials/banner.html
@@ -10,7 +10,7 @@
                     <h3 class="img-icon">
                         <div class="line"></div>
                         <img src="images/icon-1.png" alt="">
-                        <span class="bold">START</span> START DOING THAT
+                        <span class="bold">START</span> DOING THAT
                         <img src="images/icon-2.png" alt="">
                         <div class="line"></div>
                     </h3>
