--- a/src/styles/responsive/_responsive.scss
+++ b/src/styles/responsive/_responsive.scss
@@ -16,6 +16,22 @@
         }
     }
 }
+@include breakpoint(1920) {
+    .work {
+        .item {
+            .content-item {
+                .icon-link {
+                    left: 39%;
+                }
+            }
+        }
+    }
+    .maps {
+        .form-contact {
+            left: 25%;
+        }
+    }
+}
 @include breakpoint(1440) {
     .work {
         .item {
