--- a/src/styles/pages/_homepage.scss
+++ b/src/styles/pages/_homepage.scss
@@ -644,6 +644,12 @@ html {
     padding: 80px 0;
     background-color: #f9f9f9;
     position: relative;
+    .slick-slide {
+        border: 1px solid #dedede;
+        padding: 0;
+        margin: 0 15px;
+        border-radius: 5px;
+    }
     .slick-prev {
         top: -25%;
         left: 0;
@@ -730,12 +736,13 @@ html {
         padding: 15px 0;
         background-color: #8a8a8a;
         border: 1px solid transparent;
-        border-radius: 5px;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
         cursor: pointer;
         .ico {
             position: absolute;
             top: 40%;
-            left: 0;
+            left: 5%;
             right: 0;
             bottom: 0;
             .icon {
@@ -837,6 +844,8 @@ html {
         color: #606060;
         padding: 30px 0 10px;
         border-bottom: 1px solid #ebebeb;
+        width: 100px;
+        margin: 0 auto;
     }
     .mail {
         font-family: "Raleway Medium";
@@ -859,7 +868,7 @@ html {
         }
     }
     .icon {
-        padding-right: 5px;
+        padding-right: 15px;
         font-size: 20px;
     }
     img {
